--- a/doc/man/libhaiku.7
+++ b/doc/man/libhaiku.7
@@ -3,7 +3,7 @@
 libhaiku \- Poetic error messages
 .SH DESCRIPTION
 .B libhaiku
-is an API on top of a collection of haiku, thats lets a programmer
+is an API on top of a collection of haiku, that lets a programmer
 make a program print haiku for error messages. Instead of calling
 .BR perror (3),
 the program should call
