--- a/doc/man/libhaiku.7
+++ b/doc/man/libhaiku.7
@@ -8,7 +8,7 @@ make a program print haiku for error messages. Instead of calling
 .BR perror (3),
 the program should call
 .BR libhaiku_perror (3).
-.SH RATIOANLE
+.SH RATIONALE
 It is more fun and harmonious this way.
 .SH "SEE ALSO"
 .BR libhaiku_perror (3),
