making the first release
Signed-off-by: Mattias Andrée <maandree@member.fsf.org>

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 libhaiku NEWS                                         -*- outline -*-
 
-* Noteworthy changes in release 1.0 (TO BE DETERMINED) [stable]
+* Noteworthy changes in release 1.0 (2016-(01)Jan-04 UTC) [stable]
 
   Initial release.
 
