--- a/INSTALL
+++ b/INSTALL
@@ -24,11 +24,11 @@ mk/README. However, for this packages, these will be:
 	infodir="usr/local/share/info" ## Assuming default prefix.
 	
 	post_install () {
-	  install-info -- "${infodir}/radharc.info" "${infodir}/dir"
+	  install-info -- "${infodir}/libhaiku.info" "${infodir}/dir"
 	}
 	
 	pre_uninstall () {
-	  install-info --delete -- "${infodir}/radharc.info" "${infodir}/dir"
+	  install-info --delete -- "${infodir}/libhaiku.info" "${infodir}/dir"
 	}
 
 
